<resources>
    <string name="app_name">HostelNepal</string>
    <string name="Welcome"><u>Welcome!</u></string>
    <string name="LoginAs">Login As :</string>
    <string name="hostelowner">Hostel Owner</string>
    <string name="hostelOwnerlogin">Hostel Owner</string>
    <string name="guestlogin">Guest</string>
    <string name="getstarted">Get Started !!!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="loginwalatext">New Here?</string>
    <string name="create"><u>Create an Account.</u></string>
    <string name="logo">logo</string>
    <string name="email">E-mail</string>
    <string name="register">Register</string>
    <string name="phone">PhoneNumber</string>
    <string name="alreadyRegistered">Already Registered ? Login Here</string>
    <string name="title_activity_dashboard_ho">DashboardHO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="tag">TAG</string>
    <string name="my_dashboard">MY DASHBOARD</string>
    <string name="_6_items">6 items</string>
    <string name="dummy_email">abc@gmail.com</string>


    <string name="price">Price*</string>
    <string name="picture">Picture*</string>
    <string name="name_of_hostel">Name Of Hostel*</string>
    <string name="type_of_hostel">Type Of Hostel*</string>
    <string name="boys">Boys</string>
    <string name="girls">Girls</string>
    <string name="city">City*</string>
    <string name="locality">Locality*</string>
    <string name="room_description">Room Description</string>
    <string name="room_1">Room #1</string>
    <string name="room_2">Room #2</string>
    <string name="room_3">Room #3</string>
    <string name="room_4">Room #4</string>
    <string name="documents">Documents</string>
    <string name="document_info">Please Attach The Scan Copy Of Your Hostel\'s Document Provided By Hostel Association Nepal</string>
    <string name="document_vip">Document*</string>
    <string name="specific_pictures">Some Specific Picture Of Hostel</string>
    <string name="washroom">Washroom</string>
    <string name="building">Building</string>
    <string name="kitchen">Kitchen</string>
    <string name="surrounding">Surrounding</string>
    <string name="facilities">Facilities</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="laundry">Laundry</string>
    <string name="_24_hrs_electricity">24 Hrs Electricity</string>
    <string name="parking_space">Parking Space</string>
    <string name="cctv_surveillance">CCTV Surveillance</string>
    <string name="hot_amp_cold_water"><![CDATA[Hot & Cold Water]]></string>
    <string name="playground">Playground</string>
    <string name="security">Security</string>


    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_phonenumber">Your PhoneNumber</string>
    <string name="save">Save</string>
    <string name="dialog_message">Please wait...\nThis takes few Seconds</string>
    <string name="add_property">Add Property</string>
    <string name="view_property">View Property</string>
    <string name="all_users">All Users</string>
    <string name="reviews">Reviews</string>
    <string name="logout">Logout</string>
    <string name="your_password">Your Password</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="account_settings">Account Settings</string>
    <string name="saved">Saved</string>
    <string name="communication">Communication</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="for_you">For You</string>
    <string name="search">Search</string>
    <string name="book_now">Book Now</string>
    <string name="map">Map</string>
    <string name="give_your_review">Give Your Review</string>
    <string name="see_all_reviews"><u>See all Reviews</u></string>
    <string name="title_activity_hostel_location_map">Map</string>
    <string name="title_activity_retrieve_map_location">Map</string>
    <string name="nameofhostel"><u>NameOfHostel</u></string>
    <string name="booking">Booking</string>

    <string name="about">The HostelNepal is an Android Application that helps the user to cut their time and efforts to find right hostel. People have a hard time when they cannot find the right hostel, especially for those who come to the city areas to study and work. This app provides the solution to this problem. It provides easy to use mobile friendly graphical-UI oriented system. This app will offer the hostel owners to add their property, providing details such as prices, number of available beds, pictures, location, along with the available facilities. This system helps the user to view details about hostels, its location through map and allow them to book it as per their requirements by knowing its availability. The rooms which are available can be booked. The hostel owner will get the notification about the booking with all the contact information of the user and can confirm or cancel the status of the booked beds. Seekers can read the review and ratings which helps to know the atmosphere of the hostel from hosteller’s point of view. Furthermore, the user can cancel their booking and can add their own review if they find any problem about their booking. Ultimately, HostelNepal act as a bridge between the hostel and the hostel inquirer.</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact">If there is any problem or any misleading information given by Hostel,
Kindly contact with us about hostel name and your inquiry.</string>

    <string name="terms">
These terms shall govern the use of the mobile application which enables the User to connect with HostelNepal in relation to the services offered through the Platform.
Please read all these terms carefully before using, obtaining or availing any products or services. If you do not agree with these Terms of Use you may refrain from using our Services. These conditions must be read in conjunction with any other applicable terms and conditions governing the use of the Platform.

HostelNepal reserves the right to modify these Terms of Use at any time at its sole decision. It will be your responsibility to keep yourself updated with the Terms of Use from time to time. There will be following major Terms and Conditions:

The hostellers should pay their monthly fees in time otherwise the property reserves the rights to take fines.
The Property Owner should follow the company’s policy before membership with HostelNepal.
The Company can make dynamic terms and conditions for different fields.
The main focus of HostelNepal is to fulfill the seats of member hostels in different locations. So, the company will make different plans and effective packages to take students from other sides.
After booking from a hosteller, the company takes the hosteller to the particular hostel. All the responsibilities should take by the Hostel after booking. If the hosteller become ill, accident, any physical damage or died, the company does not take any type of responsibilities.
The company helps to grow the hostel business by digital marketing, online and offline marketing in different platform.</string>
    <string name="general">General</string>


</resources>
