<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title ="@string/general">

        <menu>

            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/account_settings"/>

            <item
                android:id="@+id/nav_saved"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/saved"/>


        </menu>



    </item>


    <item android:title="@string/communication">

        <menu>

            <item

                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_clear_black_24dp"
                android:title="@string/logout"/>

            <item
                android:id="@+id/nav_terms"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="Terms and Condition"/>

            <item
                android:id="@+id/nav_aboutUs"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about_us"/>


            <item
                android:title="@string/contact_us"
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contacts"/>


        </menu>



    </item>



</menu>