<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuestRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:fontFamily="@font/viga"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"

            />
        <EditText
            android:id="@+id/ownerName"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/your_name"
            android:padding="10dp"
            android:fontFamily="@font/viga"
            android:background="@drawable/edit_text_background"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/ownerPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/your_phonenumber"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/viga"
            android:inputType="phone"
            android:padding="10dp"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/emailOwner"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/your_email"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/viga"
            android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS" />

        <EditText
            android:id="@+id/passwordOwner"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/viga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/your_password"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:autofillHints="AUTOFILL_HINT_PASSWORD" />

        <Button
            android:id="@+id/hoRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_style"
            android:text="@string/register"
            android:fontFamily="@font/viga"
            android:textColor="#ffffff"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:padding="10dp"
            />



        <ProgressBar
            android:id="@+id/progressBarOwnerRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:visibility="invisible"



            />










    </LinearLayout>




</ScrollView>