<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".Common.WelcomeActivity">

    <TextView

        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/Welcome"
        android:textColor="@color/colorBlack"
        android:textSize="50sp"
        android:fontFamily="@font/viga"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/LoginAs"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:fontFamily="@font/viga"
        android:textStyle="bold"
         />

    <Button
        android:id="@+id/hostelOwnerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/viga"
        android:onClick="hostelOwnerLogin"
        android:padding="15dp"
        android:text="@string/hostelOwnerlogin"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />


    <Button
        android:id="@+id/GuestLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
       android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/viga"
        android:onClick="guestLogin"
        android:padding="15dp"
        android:text="@string/guestlogin"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
      />


</LinearLayout>