<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".Owner.LoginActivityHO">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/getstarted"
        android:textColor="@color/colorBlack"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/viga"
        android:layout_below="@id/imageView2"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:fontFamily="@font/viga"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/textView2"/>

    <EditText
        android:id="@+id/emailOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:inputType="textEmailAddress"
        android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
        android:layout_below="@id/textView4"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Password"
        android:textSize="20sp"
        android:fontFamily="@font/viga"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/emailOwner"/>

    <EditText
        android:id="@+id/passwordOwnerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:labelFor="@id/textView5"
        android:ems="10"
        android:autofillHints="AUTOFILL_HINT_PASSWORD"
        android:contentDescription="@string/Password"
        android:drawableStart="@drawable/ic_security_black_24dp"
        android:inputType="textPassword"
        android:layout_below="@id/textView5"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/loginHO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_style"
        android:text="@string/Login"
        android:layout_below="@id/passwordOwnerLogin"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/viga"
        android:text="@string/loginwalatext"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:textSize="20sp"
        android:layout_below="@id/loginHO"/>



    <TextView
        android:id="@+id/createAccountGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/viga"
        android:onClick="hostelOwnerRegister"
        android:layout_marginTop="10dp"
        android:text="@string/create"
        android:layout_toEndOf="@id/textView6"
        android:maxLines="2"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:layout_below="@id/loginHO"
        />





</RelativeLayout>