<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Guest.EditProfileOfGuest">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/editProfilePicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="131dp"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:hint="@string/your_name"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePicture"
        android:autofillHints="AUTOFILL_HINT_NAME" />

    <EditText
        android:id="@+id/editTextEmail"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:hint="@string/your_email"
        android:layout_width="0dp"
        android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:background="@drawable/edit_text_background"
        android:id="@+id/editTextPhoneNumber"
        android:padding="10dp"
        android:hint="@string/your_phonenumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:autofillHints="AUTOFILL_HINT_PHONE"

        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:text="@string/save"
        android:padding="10dp"
        android:background="@drawable/button_style"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber" />



</androidx.constraintlayout.widget.ConstraintLayout>