<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuestRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textColor="@color/colorBackground"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create An Account"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="#000000"

            />
        <EditText
            android:id="@+id/name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Enter Your Name"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"



            />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp"


            />
        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Enter Your E-mail"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"


            />

        <EditText
            android:id="@+id/password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Enter Your Password"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"


            />
        <Button
            android:id="@+id/gRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_style"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/alreadyRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyRegistered"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorBackground"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:visibility="invisible"



            />










    </LinearLayout>




</ScrollView>